# tapo

./: Cargo.toml
tapo/: Cargo.toml
tapo/examples/: tapo_generic_device_toggle.rs  tapo_p100.rs
tapo/src/: error.rs
tapo/src/api/: api_client.rs  protocol.rs
tapo/src/api/protocol/: discovery_protocol.rs  encryption_helpers.rs  klap_cipher.rs  klap_protocol.rs  passthrough_cipher.rs  passthrough_protocol.rs  tapo_protocol.rs
