[package]
name = "tapo"
version = "0.7.4"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L530, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P115), hubs (H100), switches (S200B) and sensors (T100, T110, T310, T315)."
keywords = ["IOT", "tapo", "smart-home", "smart-bulb", "smart-plug"]
categories = ["hardware-support", "embedded", "development-tools"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/tapo"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.21"
chrono = { workspace = true, default-features = false, features = [
    "clock",
    "serde",
] }
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.3"
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }

reqwest = {version="0.11.22", features=["json", "cookies"]}
getrandom = {version="0.2.10", features=["js"]}
rsa = {version="0.8.2"}
aes = "0.8.3"
cbc = "0.1.2"
sha2 = "0.10.8"
sha1 = "0.10.6"
wasm-bindgen = "0.2.87"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { workspace = true, default-features = false, features = [
    "macros",
] }
